# zatech-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.zebras.md  alembic.ini  docker-compose.yml  manifest.json  pyproject.toml
docker/: entrypoint.sh
docs/: ADAPTERS.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  HANDBOOK.md  NGROK.md  PERSISTENCE.md  PLUGINS-LOGGING.md  PLUGINS-RULES.md  PLUGINS.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  TODO.md  WORKER.md  slack-app-manifest.yml
docs/ADRs/: 0001-async-stack-and-server.md  0002-plugin-architecture.md
migrations/: README  env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_channel_rules.py  0003_invite_settings.py  0004_invite_audit_channel.py  0005_auto_responder_rules.py
src/zebras/: app_context.py  cli.py  config.py  logging.py  router.py
src/zebras/http/: app.py
src/zebras/plugin/: __init__.py  registry.py
src/zebras/plugins/admin/: __init__.py
src/zebras/plugins/autoresponder/: __init__.py  repository.py
src/zebras/plugins/debug/: __init__.py
src/zebras/plugins/invite/: __init__.py  repository.py
src/zebras/plugins/logging/: __init__.py
src/zebras/plugins/rules/: __init__.py
src/zebras/rules/: engine.py  repository.py
src/zebras/slack/: socket.py
src/zebras/storage/: datastore.py  kv.py  models.py  repositories.py
src/zebras/worker/: queue.py
