[project]
name = "zebras"
version = "0.1.0"
description = "ZEBRAS – ZaTech Engagement Bot for Responses, Automation & Support: a modular Python Slack framework"
readme = "README.zebras.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ZaTech", email = "team@example.com" }
]
dependencies = [
  "pydantic>=2.5",
  "pydantic-settings>=2.2",
  "slack_sdk>=3.33",
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "aiohttp>=3.9",
  "SQLAlchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "redis>=5.0",
  "rq>=1.16",
  "click>=8.1",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
zebras = "zebras.cli:main"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
